# C-Intermediate

./: README.md
Lab3_-cmake/: CMakeLists.txt  Student.cpp  Teacher.cpp  main.cpp
Lab3_-cmake/include/: Student.h
Lab3_Virtual_functions/: Headers.h  Lab3_Virtual_functions.cbp  Lab3_Virtual_functions.depend  Lab3_Virtual_functions.layout  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.h  main.cpp
Lab3_Virtual_functions/include/: Person.h
